[package]
name = "rust_lib"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.13"
chrono =  "0.4"
tiberius={version="0.12.2",default-features = false,features = ["native-tls","tds73"]}
tokio-util = { version = "0.7.8", features=["compat"]}
serde_json = "1.0"
serde = {version = "1", features = ["derive"]}
ureq = { version = "*", features = ["json"] }
tokio = {version = "1.35.0",features = ["full"]}
openssl = { version = "0.10", features = ["vendored"] }